--- a/index.html
+++ b/index.html
@@ -1,28 +1,27 @@
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <link rel="stylesheet" href="style.css" />
-  <link rel="JavaScript" href="script.js" />
-  <title>Spin Wheel</title>
+ <meta charset="UTF-8">
+ <title>Wheel of Fortune</title>
+ <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-  <div class="container">
-    <div class="spinBtn">Spin</div>
-    <div class="wheel">
-      <div class="number" style="--i:1;--clr:#db7093;"><span>Bite Release</span></div>
-      <div class="number" style="--i:2;--clr:#20b2aa;"><span>Front Choke Release</span></div>
-      <div class="number" style="--i:3;--clr:#d63e92;"><span>Stripping a Grab</span></div>
-      <div class="number" style="--i:4;--clr:#daa520;"><span>Wrist Release</span></div>
-      <div class="number" style="--i:5;--clr:#ff340f;"><span>Shoulder Check</span></div>
-      <div class="number" style="--i:6;--clr:#ff7f50;"><span>Protective Shuffle</span></div>
-      <div class="number" style="--i:7;--clr:#3cb371;"><span>Safety Stance</span></div>
-      <div class="number" style="--i:8;--clr:#4169e1;"><span>Elbow Check</span></div>
-      <div class="number" style="--i:9;--clr:#fbddaf;"><span>One Person Stability Hold</span></div>
-      <div class="number" style="--i:10;--clr:#8300ff;"><span>Two Person Stability Hold</span></div>
-      </div>
-    </div>
+ <div class="wheel-container">
+  <div class="wheel">
+   <div class="option"><span>Bite Release</span></div>
+   <div class="option"><span>Front Choke Release</span></div>
+   <div class="option"><span>Stripping a Grab</span></div>
+   <div class="option"><span>Wrist Release</span></div>
+   <div class="option"><span>Shoulder Check</span></div>
+   <div class="option"><span>Protective Shuffle</span></div>
+   <div class="option"><span>Safety Stance</span></div>
+   <div class="option"><span>Elbow Check</span></div>
+   <div class="option"><span>1 Person Stability Hold</span></div>
+   <div class="option"><span>2 Person Stability Hold</span></div>
+  </div>
+  <button id="spin-btn">Spin the Wheel</button>
+ </div>
+
+ <script src="script.js"></script>
 </body>
-<script src="script.js">
-</script>
 </html>
